--- a/templates/adminreg.html
+++ b/templates/adminreg.html
@@ -60,10 +60,8 @@
         <a href="{% url 'user_list' %}">Users </a>  
         <a href="/travellers">Travellers</a>
         <a href="/drivers">Drivers</a> 
-        <a href="#">Add Package</a>
-        <a href="#">Update Package</a>
-        <a href="#">View Package</a>
-        <a href="#">Ongoing Trips</a>
+        <a href="/upload_package">Add Package</a>
+        <a href="/view-packages">View Package</a>
         <a href="/logout" id="logout-link">Logout</a>
     </div>
     
