--- a/templates/deactivation_email.html
+++ b/templates/deactivation_email.html
@@ -6,6 +6,6 @@
     <title>Account Deactivation Notification</title>
 </head>
 <body>
-    <p>Your account has been deactivated. Please contact support for further details.</p>
+    <p>Your account has been Rejected. Please contact support for further details.</p>
 </body>
 </html>
