--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -95,8 +95,8 @@ tr:hover {
 <body>
     <div class="sidebar">
         <div class="profile-picture"></div>
-        <a href="{% url 'user_list' %}">Users ({{ user_count }})</a>   
         <a href="/admins" id="logout-link">Home</a>
+        <a href="{% url 'user_list' %}">Total Users ({{ user_count }})</a>   
         <!-- <a href="/logout" id="logout-link">Logout</a> -->
     </div>
         
