--- a/templates/drivers.html
+++ b/templates/drivers.html
@@ -1,51 +1,18 @@
 {% load static %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Admin Dashboard</title>
     <link rel="icon" href="{% static 'Niwi_Travels/images/favicon.ico' %}" type="image/x-icon">
 
     <!-- Add your CSS stylesheets and JavaScript files here -->
     <style>
         /* Basic styling for the sidebar */
-/* Style for the table container */
-.table-container {
-    margin-left: 300px; /* Adjust the margin to position the table to the right of the sidebar */
-    padding: 20px;
-}
-
-/* Style for the table */
-table {
-    width: 90%; /* Increase the table width */
-    margin: 20px auto; /* Center the table horizontally */
-    border-collapse: collapse;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
-}
-
-th, td {
-    border: 1px solid #ddd;
-    padding: 12px; /* Increase padding for better spacing */
-    text-align: left;
-}
-
-th {
-    background-color: #333;
-    color: #fff;
-}
-
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-    transition: background-color 0.3s; /* Add hover transition effect */
-}
-
-/* Add hover effect on table rows */
-tr:hover {
-    background-color: #ddd;
-}
-     .sidebar {
+        .sidebar {
             background-color: #113156;
             color: white;
             position: fixed;
@@ -86,143 +53,328 @@ tr:hover {
             margin-left: 250px;
             padding: 20px;
         }
-        .h1{
-            text-align: center;
-            justify-content: center;
+
+        .table-container {
+            margin-left: 300px;
+            padding: 20px;
         }
+
+        table {
+            /* Table styles */
+            border: 1px solid #ccc;
+            border-collapse: collapse;
+            width: 100%;
+            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        th, td {
+            /* Table cell styles */
+            border: 1px solid #ddd;
+            padding: 12px;
+            text-align: left;
+        }
+
+        th {
+            /* Table header styles */
+            background-color: #333;
+            color: #fff;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+            transition: background-color 0.3s;
+        }
+
+        tr:hover {
+            background-color: #ddd;
+        }
+
+        /* Pagination styles */
+        .pagination {
+            text-align: center;
+        }
+
+        .step-links {
+            margin: 20px 0;
+        }
+
+        .step-links a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #333;
+        }
+
+        .current {
+            font-weight: bold;
+            color: #333;
+        }
+
+        /* Back button styles */
+        .back-button {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            text-decoration: none;
+            border: none;
+        }
+
+        .button:hover {
+            background-color: #555;
+        }
+
+        /* Styling for approved and rejected sections */
+        .ftco-section {
+            background-color: #fff;
+            padding: 20px;
+            margin: 20px 0;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            font-size: 24px;
+            color: #333;
+        }
+        .approve-button {
+        background-color: #4CAF50; /* Green */
+        color: white;
+        padding: 8px 16px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .approve-button:hover {
+        background-color: #45a049; /* Slightly darker green on hover */
+    }
+
+    .reject-button {
+        background-color: #f44336; /* Red */
+        color: white;
+        padding: 8px 16px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .reject-button:hover {
+        background-color: #d32f2f; /* Slightly darker red on hover */
+    }
     </style>
 </head>
+
 <body>
     <div class="sidebar">
         <div class="profile-picture"></div>
-        <a href="{% url 'user_list' %}">Users ({{ user_count }})</a>   
         <a href="/admins" id="logout-link">Home</a>
-        <!-- <a href="/logout" id="logout-link">Logout</a> -->
+        <a href="{% url 'drivers' %}">Total Drivers ({{ user_count }})</a>
+        <a href="#pending">Pending Drivers</a>
+        <a href="#approved">Approved Drivers</a>
+        <a href="#rejected">Rejected Drivers</a>
+
     </div>
-        
 
-<div class="main-content">
-    <h1>Showing the List of Driver Users</h1>
-</div>
+    <div class="main-content">
+        <h1>Showing the List of Drivers</h1>
+    </div>
 
-<div class="table-container">
+   <div class="table-container">
     <main>
+        <section class="ftco-section bg-light" id="pending">
+            <h2>Pending Users</h2>
+
         <table>
             <thead>
                 <tr>
                     <th>Username</th>
                     <th>Email</th>
                     <th>License</th>
+                    <th>Date Of Birth</th>
+                    <th>Location</th>
                     <th>Verification</th>
                     <th>Update Status</th>
-                    <!-- Add more user attributes as needed -->
                 </tr>
             </thead>
             <tbody>
                 {% for user_profile in user_profiles %}
+                {% if user_profile.driver.verification == 'Pending' %}
+
                     <tr>
                         <td>{{ user_profile.username }}</td>
                         <td>{{ user_profile.email }}</td>
-                        <td>{% if user_profile.driver.license %}
-                            <a href="{{ user_profile.driver.license.url }}" target="_blank">View License</a>
-                        {% else %}
-                            No License Provided
-                        {% endif %}</td>
-                        <td>{{ user_profile.verification }}</td>
-
                         <td>
-                            <form method="post" action="{% url 'deactivate_user' user_profile.id %}">
+                            {% if user_profile.driver.license %}
+                                <a href="{{ user_profile.driver.license.url }}" target="_blank">View License</a>
+                            {% else %}
+                                No License Provided
+                            {% endif %}
+                        </td>
+                        <td>{{ user_profile.driver.date_of_birth }}</td>
+                        <td>{{ user_profile.driver.location }}</td>
+                        <td>{{ user_profile.driver.verification }}</td>
+                        <td>
+                            <form method="post" action="{% url 'update_verification_status' user_profile.id %}">
                                 {% csrf_token %}
-                                <input type="hidden" name="is_active" value="{% if user_profile.is_active %}False{% else %}True{% endif %}">
-                                <button type="submit">
-                                    {% if user_profile.is_active %}Deactivate{% else %}Activate{% endif %}
-                                </button>
+                                <input type="hidden" name="verification_status" value="approved">
+                                <button type="submit" class="approve-button">Approve</button>
+                            </form>
+                            <form method="post" action="{% url 'update_verification_status' user_profile.id %}">
+                                {% csrf_token %}
+                                <input type="hidden" name="verification_status" value="rejected">
+                                <button type="submit" class="reject-button">Reject</button>
                             </form>
                         </td>
-                        
-                        <!-- Add more user attributes as needed -->
+                        <td>
+                            {% if user_profile.driver.email_sent %}
+                                Email Sent: {{ user_profile.driver.email_sent }}
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endif %}
+
+                {% endfor %}
+            </tbody>
+        </table>
+    </section>
+        <div class="pagination">
+            <span class="step-links">
+                {% if user_profiles.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ user_profiles.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ user_profiles.number }} of {{ user_profiles.paginator.num_pages }}.
+                </span>
+
+                {% if user_profiles.has_next %}
+                    <a href="?page={{ user_profiles.next_page_number }}">next</a>
+                    <a href="?page={{ user_profiles.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+        <div class="back-button">
+            <a href="/admins" class="button">Back</a>
+        </div>
+
+        <section class="ftco-section bg-light" id="approved">
+
+            <h2>Approved Users</h2>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Username</th>
+                        <th>Email</th>
+                        <th>License</th>
+                        <th>Date Of Birth</th>
+                        <th>Location</th>
+                        <th>Verification</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for user in approved_users %}
+                        <tr>
+                            <td>{{ user.username }}</td>
+                            <td>{{ user.email }}</td>
+                            <td>
+                                {% if user.driver.license %}
+                                    <a href="{{ user.driver.license.url }}" target="_blank">View License</a>
+                                {% else %}
+                                    No License Provided
+                                {% endif %}
+                            </td>
+                            <td>{{ user.driver.date_of_birth }}</td>
+                            <td>{{ user.driver.location }}</td>
+                            <td>{{ user.driver.verification }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </section>
+    </main>
+    </main>
+        <div class="pagination">
+            <span class="step-links">
+                {% if user_profiles.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ user_profiles.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ user_profiles.number }} of {{ user_profiles.paginator.num_pages }}.
+                </span>
+
+                {% if user_profiles.has_next %}
+                    <a href="?page={{ user_profiles.next_page_number }}">next</a>
+                    <a href="?page={{ user_profiles.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+        <div class="back-button">
+            <a href="/admins" class="button">Back</a>
+        </div>
+
+        <section class="ftco-section bg-light" id="rejected">
+
+        <h2>Rejected Users</h2>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>License</th>
+                    <th>Date Of Birth</th>
+                    <th>Location</th>
+                    <th>Verification</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for user in rejected_users %}
+                    <tr>
+                        <td>{{ user.username }}</td>
+                        <td>{{ user.email }}</td>
+                        <td>
+                            {% if user.driver.license %}
+                                <a href="{{ user.driver.license.url }}" target="_blank">View License</a>
+                            {% else %}
+                                No License Provided
+                            {% endif %}
+                        </td>
+                        <td>{{ user.driver.date_of_birth }}</td>
+                        <td>{{ user.driver.location }}</td>
+                        <td>{{ user.driver.verification }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
-    </main>
-    <div class="pagination">
-        <span class="step-links">
-            {% if user_profiles.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ user_profiles.previous_page_number }}">previous</a>
-            {% endif %}
-            
-            <span class="current">
-                Page {{ user_profiles.number }} of {{ user_profiles.paginator.num_pages }}.
+        <div class="pagination">
+            <span class="step-links">
+                {% if user_profiles.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ user_profiles.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ user_profiles.number }} of {{ user_profiles.paginator.num_pages }}.
+                </span>
+
+                {% if user_profiles.has_next %}
+                    <a href="?page={{ user_profiles.next_page_number }}">next</a>
+                    <a href="?page={{ user_profiles.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
             </span>
-            
-            {% if user_profiles.has_next %}
-                <a href="?page={{ user_profiles.next_page_number }}">next</a>
-                <a href="?page={{ user_profiles.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
+        </div>
+        <div class="back-button">
+            <a href="/admins" class="button">Back</a>
+        </div>
     </div>
-    <div class="back-button">
-        <a href="/admins" class="button">Back</a>
-    </div>
-</div>
-
-<script>
-    // Wait for the document to be fully loaded
-    document.addEventListener("DOMContentLoaded", function () {
-        // Find the logout button by its ID
-        var logoutButton = document.getElementById("logout-link");
-
-        // Add a click event listener to the logout button
-        logoutButton.addEventListener("click", function () {
-            // Reload the page after a short delay (you can adjust the delay as needed)
-            setTimeout(function () {
-                location.reload();
-            }, 1000); // Reload after 1 second (1000 milliseconds)
-        });
-    });
-
-
-    document.addEventListener("DOMContentLoaded", function () {
-// Find the Next button by its ID
-var nextButton = document.getElementById("next-button");
-
-// Add a click event listener to the Next button
-nextButton.addEventListener("click", function () {
-    // Get the current page number from the URL (if present)
-    var currentPage = parseInt(new URLSearchParams(window.location.search).get('page')) || 1;
-
-    // Calculate the next page number
-    var nextPage = currentPage + 1;
-
-    // Update the URL with the new page number
-    var newUrl = window.location.pathname + "?page=" + nextPage;
-
-    // Redirect to the new URL
-    window.location.href = newUrl;
-});
-});
-</script>
-<!-- Include jQuery library -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-<script>
-    $(document).ready(function () {
-        $('.toggle-button').click(function () {
-            var user_id = $(this).data('user-id');
-            var button = $(this);
-            $.post(`/deactivate_user/${user_id}/`, function (data) {
-                if (data.is_active) {
-                    button.text('Deactivate');
-                } else {
-                    button.text('Activate');
-                }
-            });
-        });
-    });
-</script>
-
-<!-- Add your JavaScript scripts here, if needed -->
 </body>
 </html>
