--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -126,10 +127,14 @@
         {% endif %}
         <form method="post">
             {% csrf_token %}
-            <input type="text" name="username" placeholder="username" required>
+            <input type="text" name="username" placeholder="Enter your Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit" id="login-link">Login</button>
-            <a href="{% url 'reset_password' %}">Forgot Your Password</a>
+            <a href="{% url 'reset_password' %}">Forgot Your Password</a><br>
+            <button class="custom-button">
+                <a href="{% provider_login_url 'google' %}">Login with Google</a>
+            </button>
+            
         </form>
     </div>
     <div class="footer">
@@ -151,4 +156,30 @@
         });
     </script>
 </body>
+<style>
+    /* Define your custom font styles here */
+    .custom-button {
+        background-color: #007BFF;
+        color: white;
+        padding: 14px 20px;
+        margin: 10px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 100%;
+        transition: background-color 0.3s;
+    }
+
+    .custom-button a {
+        text-decoration: none;
+        color: inherit; /* Inherit the color from the parent */
+        font-weight: bold; /* Set the font weight to bold */
+        font-size: 16px; /* Adjust the font size as needed */
+    }
+
+    .custom-button:hover {
+        background-color: #0056b3;
+    }
+</style>
+
 </html>
